--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odin-shopping-cart",
-  "homepage": "https://martenmatrix.github.io/",
+  "homepage": "https://martenmatrix.github.io/odin-shopping-cart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
