--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "odin-shopping-cart",
   "homepage": "https://martenmatrix.github.io/odin-shopping-cart",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
